# legacy_demo

.git.backup/: COMMIT_EDITMSG  ORIG_HEAD  index
.git.backup/logs/: HEAD
backend/: .coverage  .coveragerc  .env.template  .gitignore  docker-compose.yml  my_milvus.db  pyproject.toml  pytest.ini  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 843194bba944_create_mental_health_conversations_table.py
backend/app/: main.py  readme.md
backend/app/api/endpoints/: mental_health_conversation.py
backend/app/api/v1/: rag.py
backend/app/client/: api_client.py  example_usage.py
backend/app/crud/: mental_health_conversation.py
backend/app/db/: database.py  milvus_client.py
backend/app/models/: mental_health_conversation.py
backend/app/schemas/: mental_health_conversation.py
backend/app/scripts/: import_conversations.py
backend/app/services/: conversation_generation.py
backend/app/templates/: conversation_gen_rag_prompt.jinja
backend/app/tests/: conftest.py  test_api.py  test_client.py  test_models.py
backend/app/utils/: embeddings.py
backend/app/worker/: celery_app.py  tasks.py
backend/data/: local_milvus.db  my_milvus.db
backend/instructions/: instructions.md
backend/instructions/scripts/: milvus_test.py
backend/scripts/: test_milvus_search.py
dagster/: Dockerfile_user_code  dagster.yaml  definitions.py  docker-compose.yml  mental_health_assets.py
frontend/: package-lock.json  package.json
frontend/instructions/: instructions.md
frontend/src/: App.tsx
terraform/: README.md  main.tf  outputs.tf
(+8 files in other folders)
